@@ -1,4 +1,3 @@
-Inventory | DuplicateInventory
 Sale Order | PaymentCondition
 Sale Trade Condition | Comment
 Sale Trade Condition | PaymentCondition
