@@ -1,3 +1,6 @@
+2007-08-02 Romain
+* Add InventoryConstraint
+
 207-07-30 yo
 * Add Resource_getPriceCalculationOperandDict.
 
